--- a/src/_layouts/internal.html
+++ b/src/_layouts/internal.html
@@ -3,17 +3,16 @@ layout: master
 ---
 
 <!-- HERO -->
-<section class="hero">
-    <div class="hero-header">
-        <div class="row outer-row">
-            <div class="columns">
-                <div class="animated fadeInLeft">
-                    <h1>{{ page.title }}</h1>
-                </div>
+<div class="lv-hero">
+    <div class="row outer-row">
+        <div class="medium-8 medium-centered columns">
+            <div class="lv-hero-caption animated fadeInLeft">
+                <h1>Build Responsive Mega Menu with Foundation</h1>
+                <h2 class="subheader">Give your clients more</h2>
             </div>
         </div>
     </div>
-</section>
+</div> <!-- .hero -->
 
 <!-- BREADCRUMBS -->
 <nav class="breadcrumbs-bar">
