--- a/src/_layouts/internal/tutorials.html
+++ b/src/_layouts/internal/tutorials.html
@@ -1,31 +1,10 @@
 ---
-layout: master
+layout: internal
 ---
-
-{% assign settings = site.data.settings %}
-
-<!-- HERO -->
-<div class="lv-hero is-fullscreen">
-    <div class="lv-hero-caption text-center animated fadeInLeft">
-    	<div class="row outer-row">
-    		<div class="large-9 medium-centered columns">
-    			<h1>I Build Websites for Agencies</h1>
-    			<h3 class="subheader">Perfectly Responsive Everytime</h3>
-    		</div>
-    	</div>
-    </div>
-
-    <div class="lv-hero-down-button">
-    	<a href="#"><i class="fa fa-angle-down"></i></a>
-    </div>
-</div>
-
-<!-- Need black bar -->
-<!-- { % include snippets/breadcrumbs.html %} -->
 
 <section class="section light-section">
 	<div class="row outer-row">
-		<div class="large-8X medium-centeredX columns text-center">
+		<div class="large-8 medium-centered columns text-center">
 
 			<h2>H2. Why Do Others Fail?</h2>
 			<h3>H3. It's awful out there...</h3>
