--- a/src/_scss/app/base/_global.scss
+++ b/src/_scss/app/base/_global.scss
@@ -42,26 +42,26 @@ html {
 // Using EMs because media queries in Foundation do so
 //=========================================
 
-.row {
-    @media #{$medium-up}  { max-width: upper-bound($medium-range);  }
-    @media #{$large-up}   { max-width: upper-bound($large-range);   }
-    @media #{$xlarge-up}  { max-width: upper-bound($xlarge-range);  }
-    @media #{$xxlarge-up} { max-width: upper-bound($xxlarge-range); }
-}
-
 // .row {
-// 	@media #{$medium-up}  { max-width: upper-bound($medium-range)  + 5.000em; }
-// 	@media #{$large-up}   { max-width: upper-bound($large-range)   + 5.000em; }
-// 	@media #{$xlarge-up}  { max-width: upper-bound($xlarge-range)  + 5.000em; }
-// 	@media #{$xxlarge-up} { max-width: upper-bound($xxlarge-range) + 5.000em; }
+//     @media #{$medium-up}  { max-width: upper-bound($medium-range);  }
+//     @media #{$large-up}   { max-width: upper-bound($large-range);   }
+//     @media #{$xlarge-up}  { max-width: upper-bound($xlarge-range);  }
+//     @media #{$xxlarge-up} { max-width: upper-bound($xxlarge-range); }
 // }
+
+.row {
+    @media #{$medium-up}  { max-width: upper-bound($medium-range)  + 5.000em; }
+    @media #{$large-up}   { max-width: upper-bound($large-range)   + 5.000em; }
+    @media #{$xlarge-up}  { max-width: upper-bound($xlarge-range)  + 5.000em; }
+    // @media #{$xxlarge-up} { max-width: upper-bound($xxlarge-range) + 5.000em; }
+}
 
 // Add side padding to the page above small
 .outer-row {
-	@media #{$medium-up} {
-		padding-left: $page-padding - $column-gutter / 2;
-		padding-right: $page-padding - $column-gutter / 2;
-	}
+    @media #{$medium-up} {
+        padding-left: $page-padding - $column-gutter / 2;
+        padding-right: $page-padding - $column-gutter / 2;
+    }
 }
 
 // Ensure images scale to block grid LIs */
