--- a/src/_scss/foundation/_settings.scss
+++ b/src/_scss/foundation/_settings.scss
@@ -87,7 +87,8 @@ $include-html-global-classes: $include-html-classes;
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // We use these to define default font stacks
-$font-family-sans-serif: "Gotham Rounded", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+$font-family-sans-serif: "Gotham Rounded Book";
+// $font-family-sans-serif: "Gotham Rounded", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 // $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 // $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 
@@ -155,11 +156,11 @@ $global-radius: 8px;
 // d. Media Query Ranges
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-$small-range: (0em, 40em);        // 640
-$medium-range: (40.063em, 64em);  // 641-1024
-$large-range: (64.063em, 80em);   // 1025-1280
-$xlarge-range: (80.063em, 90em);  // 1281-1440
-$xxlarge-range: (90.063em);       // 1440+
+$small-range: (0em, 40em);            // 640
+$medium-range: (40.063em, 48em);      // 641-768
+$large-range: (48.063em, 64em);       // 769-1024
+$xlarge-range: (64.063em, 73.125em);  // 1025-1170
+$xxlarge-range: (73.188em);           // 1170+
 
 $screen: "only screen";
 
@@ -206,9 +207,9 @@ $header-font-family: 'Montserrat', 'sans-serif';
 $header-font-weight: bold; //$font-weight-normal;
 // $header-font-style: normal;
 $header-font-color: $dark-bg-color;
-// $header-line-height: 1.4;
+$header-line-height: 1.2; //1.4;
 // $header-top-margin: .2rem;
-// $header-bottom-margin: .5rem;
+$header-bottom-margin: rem-calc(20);
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
@@ -241,7 +242,7 @@ $subheader-font-color: $primary-color; //scale-color($header-font-color, $lightn
 // We use these to style paragraphs
 // $paragraph-font-family: inherit;
 // $paragraph-font-weight: $font-weight-normal;
-$paragraph-font-size: rem-calc(26);
+$paragraph-font-size: rem-calc(18);
 $paragraph-line-height: 1.6;
 // $paragraph-margin-bottom: rem-calc(20);
 // $paragraph-aside-font-size: rem-calc(14);
