--- a/src/_layouts/master.html
+++ b/src/_layouts/master.html
@@ -61,7 +61,7 @@
             </header>
 
             <!-- NAVIGATION -->
-            <nav class="global-navigation show-for-xlarge-up">
+            <nav class="global-navigation show-for-large-up">
                 <div class="row outer-row">
                     <div class="columns">
                         <div class="topbar">
