--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,16 +1,17 @@
 {% assign settings = site.data.settings %}
-{% assign logo = "/img/content/logo-light@2x.png" %}
+{% assign logo_default = "/img/content/logo-type-default.svg" %}
+{% assign logo_type = page.logo_type %}
 
 <div class="row outer-row">
     <div class="columns">
 
         <!-- Logo -->
         <a class="logo" href="/" title="{{ settings.seo_title }}" itemprop="url">
-            <img width="230" src="{{ logo }}" alt="{{ settings.company_title }}" itemprop="logo">
+            <img width="215" src="{% if logo_type %}{{ logo_type }}{% else %}{{ logo_default }}{% endif %}" alt="{{ settings.company_title }}" itemprop="logo">
         </a>
 
         <!-- Hamburger -->
-        <div class="header-mobile-menu hide-for-xlarge-up">
+        <div class="header-mobile-menu hide-for-large-up">
             <a href="#"> <span class="hamburger"><span class="hamburger-icon"></span></span></a>
         </div>
 
