--- a/src/_scss/app/base/_global.scss
+++ b/src/_scss/app/base/_global.scss
@@ -1,7 +1,7 @@
 /*
     GLOBAL.CSS
 
-    - Last updated: ^^^^^^^^
+    - Last updated: 02.06.15
     - hello@liquidvisual.com
 */
 //-----------------------------------------------------------------
@@ -15,63 +15,55 @@ $page-padding: rem-calc(40);
 //-----------------------------------------------------------------
 
 html, body {
-	//@media #{$small-only} {
-        //font-size: 90%;
-	//}
-    // background: red;
+	@media #{$small-only} {
+        font-size: 85%;
+	}
 }
 
 html {
     // overflow-x: hidden;
 }
 
+//-----------------------------------------------------------------
+// Foundation Overrides (Hacks)
+//-----------------------------------------------------------------
+
 .lv-super,
 .lv-page {
     height: 100%;
 }
 
-//=========================================
+//-----------------------------------------------------------------
 // Snap Grid
 //
 // Tells grid to "snap" into each breakpoint.
 // Removes issue of seeing elements super large
 // before falling into place naturally.
-//
-// Notes:
-// 5.000em = 80 (page-padding * 2)
-// Using EMs because media queries in Foundation do so
-//=========================================
-
-// .row {
-//     @media #{$medium-up}  { max-width: upper-bound($medium-range);  }
-//     @media #{$large-up}   { max-width: upper-bound($large-range);   }
-//     @media #{$xlarge-up}  { max-width: upper-bound($xlarge-range);  }
-//     @media #{$xxlarge-up} { max-width: upper-bound($xxlarge-range); }
-// }
+//-----------------------------------------------------------------
 
 .row {
-    @media #{$medium-up}  { max-width: upper-bound($medium-range)  + 5.000em; }
-    @media #{$large-up}   { max-width: upper-bound($large-range)   + 5.000em; }
-    @media #{$xlarge-up}  { max-width: upper-bound($xlarge-range)  + 5.000em; }
-    // @media #{$xxlarge-up} { max-width: upper-bound($xxlarge-range) + 5.000em; }
-}
+    @media #{$medium-up}  { max-width: calc(upper-bound($medium-range)       + #{$page-padding * 2}; }
+    @media #{$large-up}   { max-width: calc(upper-bound($large-range)        + #{$page-padding * 2}; }
+    @media #{$xlarge-up}  { max-width: calc(#{upper-bound($xlarge-range)}    + #{$page-padding * 2}); }
+    // @media #{$xxlarge-up} { max-width: calc(#{upper-bound($xxlarge-range) + #{5.000em}); }
 
-// Add side padding to the page above small
-.outer-row {
-    @media #{$medium-up} {
-        padding-left: $page-padding - $column-gutter / 2;
-        padding-right: $page-padding - $column-gutter / 2;
+    &.outer-row {
+        padding: rem-calc(0 5);
+
+        @media #{$medium-up} {
+            padding: 0 ($page-padding - $column-gutter / 2);
+        }
     }
 }
+
+//-----------------------------------------------------------------
+// Patch Block Grid
+//-----------------------------------------------------------------
 
 // Ensure images scale to block grid LIs */
 // ul[class*='block-grid'] li img {
 // 	width: 100%;
 // }
-
-//-----------------------------------------------------------------
-// lv-super: top-most non-visual wrapper | lv-page: visual wrapper
-//-----------------------------------------------------------------
 
 //=========================================
 //
