--- a/src/_scss/app/components/_breadcrumbs.scss
+++ b/src/_scss/app/components/_breadcrumbs.scss
@@ -12,8 +12,18 @@
 //-----------------------------------------------------------------
 
 .lv-breadcrumbs {
-	background: #1E1E22;
-	padding: rem-calc(30 0);
+	// background: #1E1E22;
+	padding: rem-calc(30 0 0 0);
+	font-family: $font-family-serif;
+	font-size: $h5-font-size;
+}
+
+.lv-breadcrumbs-wrapper {
+	// background: white;
+
+	.divider {
+		margin-top: rem-calc(10);
+	}
 }
 
 
