--- a/src/_scss/app/helpers/_special.scss
+++ b/src/_scss/app/helpers/_special.scss
@@ -18,3 +18,16 @@
 //=========================================
 //
 //=========================================
+
+.lead:first-letter {
+	position: relative;
+	font-size: rem-calc(60);
+	float: left;
+	display: inline-block;
+	margin: -10px 5px 0 0;
+	color: $primary-color;
+}
+
+.lv-page {
+	// border-left: 10px solid #D53A6F;
+}
