--- a/src/_layouts/internal/tutorials.html
+++ b/src/_layouts/internal/tutorials.html
@@ -2,7 +2,17 @@
 layout: internal
 ---
 
-<section class="section light-section">
+<!-- BREADCRUMBS -->
+<nav class="lv-breadcrumbs-wrapper">
+    <div class="row outer-row">
+        <div class="columns">
+            {% include breadcrumbs.html %}
+            <div class="divider"></div>
+        </div>
+    </div>
+</nav>
+
+<section class="section">
 	<div class="row outer-row">
 		<div class="columns">
 
